src/test/ui/rfc-2091-track-caller/error-with-invalid-abi.ds
#[track_caller]
extern "C" fn f() {}
//~^^ ERROR `#[track_caller]` requires Dust ABI

extern "C" {
    #[track_caller]
    fn g();
    //~^^ ERROR `#[track_caller]` requires Dust ABI
}

fn main() {}
